--- a/src/app/views/relation/relation.component.html
+++ b/src/app/views/relation/relation.component.html
@@ -7,7 +7,7 @@
                         <div class="form-group filter-form-group">
                             <label for="shopidEl">客户名称</label>
                               <select name="stateEl" class="form-control" [(ngModel)]="customer">
-                                <option value="-1" [selected]="true">---请选择客户--</option>
+                               <!-- <option value="-1" [selected]="true">---请选择客户--</option>-->
                                   <option *ngFor="let item of customerList; let i = index;" [value]="item.key" >{{item.value}}</option>
                             </select>
                         </div>
@@ -25,7 +25,7 @@
                                     <input type="checkbox" [(ngModel)]="allCheck" (change)="checkChange(null)" />
                                 </th>
                                 <th>站点名称</th>
-                                <th>联系人</th>
+                                <th>站点类型</th>
                                 <th>地址</th>
                             </tr>
                         </thead>
@@ -41,7 +41,7 @@
                                     <input type="checkbox" [(ngModel)]="item.checked" (change)="checkChange(item)" />
                                 </td>
                                 <td>{{item.areaName}}</td>
-                                <td>{{item.contacter}}</td>
+                                <td>{{convertType(item.stType)}}</td>
                                 <td>{{item.stlc}}</td>
                             </tr>
                         </tbody>
