modify the load method

--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -15,7 +15,7 @@
     <app-aside></app-aside>
 </div>
 <app-modal></app-modal>
-<!-- <app-alert></app-alert> -->
+<app-alert></app-alert> 
 <app-loading></app-loading>
 <app-footer></app-footer>
  
